# djsuite

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  release-prep.yml  release.yml
src/djinit/: backup.py  cli.py  generator.py  manifest.py  renderer.py  updater.py
src/djinit/templates/common/: README.md.j2  dotenv.j2  gitignore  pyproject.toml.j2
src/djinit/templates/common/base/: apps.py  pagination.py  urls.py  views.py
src/djinit/templates/common/base/constants/: magic_numbers.py
src/djinit/templates/common/base/management/commands/: createsu.py
src/djinit/templates/common/base/services/: orphan_service.py
src/djinit/templates/common/github/: copilot-instructions.md.j2
src/djinit/templates/common/github/workflows/: ci.yml.j2
src/djinit/templates/common/main/: settings.py.j2  urls.py
src/djsuite/: backup.py  cli.py  diff.py  generator.py  manifest.py  renderer.py  updater.py
src/djsuite/templates/common/: CHANGELOG.md  CONTRIBUTING.md.j2  README.md.j2  conftest.py.j2  docker-compose.yml.j2  dotenv.j2  gitignore  pre-commit-config.yaml  pyproject.toml.j2
src/djsuite/templates/common/base/: containers.py  urls.py  views.py
src/djsuite/templates/common/base/constants/: celery_task_status.py  model_viewset.py
src/djsuite/templates/common/base/management/commands/: createsu.py
src/djsuite/templates/common/github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md.j2  release.yml
src/djsuite/templates/common/github/workflows/: ci.yml.j2
src/djsuite/templates/common/main/: apps.py  celery.py.j2  settings.py.j2  urls.py
src/djsuite/templates/common/tests/: test_health.py
tests/: test_cli.py  test_generator.py  test_renderer.py  test_updater.py
